--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="./assets/css/normalize.css" rel="stylesheet">
     <link href="./assets/css/reset.css" rel="stylesheet">
     <link href="./assets/css/style.css" rel="stylesheet">
-    <!-- <link href="./assets/css/destaques.css" rel="stylesheet"> -->
-    <!-- <link href="./assets/css/populares.css" rel="stylesheet"> -->
+    <link href="./assets/css/destaques.css" rel="stylesheet">
+    <link href="./assets/css/populares.css" rel="stylesheet">
     <link href="./assets/css/menu.css" rel="stylesheet">
-    <!-- <link href="./assets/css/responsivo.css" rel="stylesheet"> -->
+    <link href="./assets/css/responsivo.css" rel="stylesheet">
 </head>
 
 <body class="app">
@@ -80,6 +80,9 @@
                 </ul>
             </div>
         </section>
+
+        <!-- codigo para la siguiente seccion "Aplicaciones populares"-->
+        
         <section class="populares">
             <div class="populares__items">
                 <div class="populares__info">
